<resources>
    <string name="app_name">Weatherry</string>
    <string name="text_in_sync">in sync</string>
    <string name="text_c">°C</string>
    <string name="text_temperature">%1$d °C</string>
    <string name="description_down_arrow_image">Down arrow image</string>
    <string name="description_up_arrow_image">Up arrow image</string>
    <string name="description_weather_image">Weather image</string>
    <string name="description_sunrise_image">Sunrise image</string>
    <string name="description_sunset_image">Sunset image</string>
    <string name="description_settings_image">Settings image button</string>
    <string name="description_map_image_button">Map image button</string>
    <string name="text_details">Details</string>
    <string name="text_precipitation">Precipitation.</string>
    <string name="text_se_wind">SE Wind</string>
    <string name="text_humidity">Humidity</string>
    <string name="text_visibility">Visibility</string>
    <string name="text_uv">UV</string>
    <string name="text_pressure">Pressure</string>
    <string name="text_location">Location</string>
    <string name="text_settings">Settings</string>
    <string name="text_forecast">Forecast</string>
    <string name="text_min">min.</string>
    <string name="text_max">max.</string>
    <string name="description_current_weather_icon">Current weather icon</string>
    <string name="description_precipitation_icon">Precipitation icon</string>
    <string name="description_wind_icon">Wind icon</string>
    <string name="missing_permission">Missing location permission!.</string>
    <string name="location_disabled">Location is turned off.</string>
    <string name="gps_fix_failed">To continue, turn on device location</string>
    <string name="unknown_error">An unknown error occurred.</string>
    <string name="time_out">The request timed out.</string>
    <string name="too_many_request">We\'re experiencing a temporary delay. Please try again in a few moments.</string>
    <string name="no_internet">Couldn\'t reach server. Check your internet connection.</string>
    <string name="server_error">Oops, something went wrong. Please try again.</string>
    <string name="location_permission_required">Location permissions required.</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="text_current_location">Current Location</string>
    <string name="text_city_country_name">%1$s, %2$s</string>

</resources>