<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_day_of_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tool:text="Thursday" />

    <ImageView
        android:id="@+id/iv_weather_image"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="6dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_day_of_week"
        app:layout_constraintStart_toEndOf="@id/tv_day_of_week"
        app:layout_constraintTop_toTopOf="@id/tv_day_of_week"
        android:contentDescription="@string/description_weather_image" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_min_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_day_of_week"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_day_of_week"
        tool:text="11 C" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_min_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:alpha="0.7"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/text_min"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_day_of_week"
        app:layout_constraintEnd_toStartOf="@id/tv_min_temperature"
        app:layout_constraintTop_toTopOf="@id/tv_day_of_week" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_max_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_day_of_week"
        app:layout_constraintEnd_toStartOf="@id/tv_min_text"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_day_of_week"
        tool:text="11 C" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_max_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:alpha="0.7"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/text_max"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_day_of_week"
        app:layout_constraintEnd_toStartOf="@id/tv_max_temperature"
        app:layout_constraintTop_toTopOf="@id/tv_day_of_week" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_hour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_day_of_week"
        app:layout_constraintTop_toBottomOf="@id/tv_day_of_week"
        tool:listitem="@layout/item_hour" />

</androidx.constraintlayout.widget.ConstraintLayout>